<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:scrollbars="none" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  tools:context=".RequestCondomActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#5ba4e5">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/open_for_business"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/open_for_business_text"
                android:textSize="20dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:id="@+id/request_condom_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/request_condom_text"
                android:textSize="15sp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/request_details"
                android:id="@+id/request_condom_text_details"
                android:textSize="12sp"
                android:textColor="#000000" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="#969696" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Building Name"
                    android:textColor="#000000"/>

                <Spinner
                    android:id="@+id/dorms_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/request_condom_delivery_type"
                    android:textColor="#000000"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:id="@+id/request_condom_delivery_type_radio_group">
                    <RadioButton
                        android:id="@+id/request_condom_delivery_type_radio_to_room"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/request_condom_delivery_type_to_room"
                        android:textColor="#000000" />
                    <RadioButton
                        android:id="@+id/request_condom_delivery_type_radio_to_lounge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/request_condom_delivery_type_to_lounge"
                        android:textColor="#000000" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Room/Floor Number:"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/dorm_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:hint="###"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="bottom">

                <Button
                    android:id="@+id/request_condom_button"
                    android:background="@drawable/btn_grey"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:enabled="false"
                    android:text="@string/request_condom_button_text"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>