<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  tools:context=".RegisterActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#5ba4e5">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_2"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize = "16sp"
            android:textStyle="bold"
            android:text="@string/register_about"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize = "16sp"
            android:text="@string/service_how_to"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize = "12sp"
            android:text="@string/project_purpose"/>
        <EditText
            android:id="@+id/signupToken"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="Enter Token Here"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_margin="10dp"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/btn_green"
            android:text="Register Now!"/>
        
    </LinearLayout>
</ScrollView>